# api/centralconfig/v1/server_service.pb.go
@@ -1,0 +1,193 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.11
+// 	protoc        (unknown)
+// source: centralconfig/v1/server_service.proto
+
+package centralconfigv1
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type GetServerInfoRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetServerInfoRequest) Reset() {
+	*x = GetServerInfoRequest{}
+	mi := &file_centralconfig_v1_server_service_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetServerInfoRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetServerInfoRequest) ProtoMessage() {}
+
+func (x *GetServerInfoRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_centralconfig_v1_server_service_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetServerInfoRequest.ProtoReflect.Descriptor instead.
+func (*GetServerInfoRequest) Descriptor() ([]byte, []int) {
+	return file_centralconfig_v1_server_service_proto_rawDescGZIP(), []int{0}
+}
+
+type GetServerInfoResponse struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	// Semantic version string (e.g. "1.2.3" or "dev").
+	Version string `protobuf:"bytes,1,opt,name=version,proto3" json:"version,omitempty"`
+	// Git commit hash.
+	Commit string `protobuf:"bytes,2,opt,name=commit,proto3" json:"commit,omitempty"`
+	// Enabled server features. Keys are feature names, values indicate enabled state.
+	// Known features: schema, config, audit, usage_tracking, jwt_auth, http_gateway.
+	Features      map[string]bool `protobuf:"bytes,3,rep,name=features,proto3" json:"features,omitempty" protobuf_key:"bytes,1,opt,name=key" protobuf_val:"varint,2,opt,name=value"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetServerInfoResponse) Reset() {
+	*x = GetServerInfoResponse{}
+	mi := &file_centralconfig_v1_server_service_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetServerInfoResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetServerInfoResponse) ProtoMessage() {}
+
+func (x *GetServerInfoResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_centralconfig_v1_server_service_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetServerInfoResponse.ProtoReflect.Descriptor instead.
+func (*GetServerInfoResponse) Descriptor() ([]byte, []int) {
+	return file_centralconfig_v1_server_service_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GetServerInfoResponse) GetVersion() string {
+	if x != nil {
+		return x.Version
+	}
+	return ""
+}
+
+func (x *GetServerInfoResponse) GetCommit() string {
+	if x != nil {
+		return x.Commit
+	}
+	return ""
+}
+
+func (x *GetServerInfoResponse) GetFeatures() map[string]bool {
+	if x != nil {
+		return x.Features
+	}
+	return nil
+}
+
+var File_centralconfig_v1_server_service_proto protoreflect.FileDescriptor
+
+const file_centralconfig_v1_server_service_proto_rawDesc = "" +
+	"\n" +
+	"%centralconfig/v1/server_service.proto\x12\x10centralconfig.v1\x1a\x1cgoogle/api/annotations.proto\"\x16\n" +
+	"\x14GetServerInfoRequest\"\xd9\x01\n" +
+	"\x15GetServerInfoResponse\x12\x18\n" +
+	"\aversion\x18\x01 \x01(\tR\aversion\x12\x16\n" +
+	"\x06commit\x18\x02 \x01(\tR\x06commit\x12Q\n" +
+	"\bfeatures\x18\x03 \x03(\v25.centralconfig.v1.GetServerInfoResponse.FeaturesEntryR\bfeatures\x1a;\n" +
+	"\rFeaturesEntry\x12\x10\n" +
+	"\x03key\x18\x01 \x01(\tR\x03key\x12\x14\n" +
+	"\x05value\x18\x02 \x01(\bR\x05value:\x028\x012\x8a\x01\n" +
+	"\rServerService\x12y\n" +
+	"\rGetServerInfo\x12&.centralconfig.v1.GetServerInfoRequest\x1a'.centralconfig.v1.GetServerInfoResponse\"\x17\x82\xd3\xe4\x93\x02\x11\x12\x0f/v1/server/infoB\xce\x01\n" +
+	"\x14com.centralconfig.v1B\x12ServerServiceProtoP\x01ZAgithub.com/opendecree/decree/api/centralconfig/v1;centralconfigv1\xa2\x02\x03CXX\xaa\x02\x10Centralconfig.V1\xca\x02\x10Centralconfig\\V1\xe2\x02\x1cCentralconfig\\V1\\GPBMetadata\xea\x02\x11Centralconfig::V1b\x06proto3"
+
+var (
+	file_centralconfig_v1_server_service_proto_rawDescOnce sync.Once
+	file_centralconfig_v1_server_service_proto_rawDescData []byte
+)
+
+func file_centralconfig_v1_server_service_proto_rawDescGZIP() []byte {
+	file_centralconfig_v1_server_service_proto_rawDescOnce.Do(func() {
+		file_centralconfig_v1_server_service_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_centralconfig_v1_server_service_proto_rawDesc), len(file_centralconfig_v1_server_service_proto_rawDesc)))
+	})
+	return file_centralconfig_v1_server_service_proto_rawDescData
+}
+
+var file_centralconfig_v1_server_service_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_centralconfig_v1_server_service_proto_goTypes = []any{
+	(*GetServerInfoRequest)(nil),  // 0: centralconfig.v1.GetServerInfoRequest
+	(*GetServerInfoResponse)(nil), // 1: centralconfig.v1.GetServerInfoResponse
+	nil,                           // 2: centralconfig.v1.GetServerInfoResponse.FeaturesEntry
+}
+var file_centralconfig_v1_server_service_proto_depIdxs = []int32{
+	2, // 0: centralconfig.v1.GetServerInfoResponse.features:type_name -> centralconfig.v1.GetServerInfoResponse.FeaturesEntry
+	0, // 1: centralconfig.v1.ServerService.GetServerInfo:input_type -> centralconfig.v1.GetServerInfoRequest
+	1, // 2: centralconfig.v1.ServerService.GetServerInfo:output_type -> centralconfig.v1.GetServerInfoResponse
+	2, // [2:3] is the sub-list for method output_type
+	1, // [1:2] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_centralconfig_v1_server_service_proto_init() }
+func file_centralconfig_v1_server_service_proto_init() {
+	if File_centralconfig_v1_server_service_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_centralconfig_v1_server_service_proto_rawDesc), len(file_centralconfig_v1_server_service_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   3,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_centralconfig_v1_server_service_proto_goTypes,
+		DependencyIndexes: file_centralconfig_v1_server_service_proto_depIdxs,
+		MessageInfos:      file_centralconfig_v1_server_service_proto_msgTypes,
+	}.Build()
+	File_centralconfig_v1_server_service_proto = out.File
+	file_centralconfig_v1_server_service_proto_goTypes = nil
+	file_centralconfig_v1_server_service_proto_depIdxs = nil
+}
